--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,8 +26,8 @@ services:
     container_name: mongo
     restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=mazhugasergei
+      - MONGO_INITDB_ROOT_PASSWORD=12312131231213
 
   mongo-express:
     image: mongo-express
@@ -36,8 +36,8 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_ROOT_USER}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_ROOT_PASSWORD}
-      - ME_CONFIG_BASICAUTH_USERNAME=${MONGO_BASICAUTH_USERNAME}
-      - ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_BASICAUTH_PASSWORD}
-      - ME_CONFIG_MONGODB_URL=mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongo:27017
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=mazhugasergei
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=12312131231213
+      - ME_CONFIG_BASICAUTH_USERNAME=mazhugasergei
+      - ME_CONFIG_BASICAUTH_PASSWORD=12312131231213
+      - ME_CONFIG_MONGODB_URL=mongodb://mazhugasergei:12312131231213@mongo:27017
